add empty folder

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,10 @@
 *.pickle
 __pycache__/
 data/*
-qa_pipeline/cache/*
-qa_pipeline/logs/*
-qa_pipeline/bestmodel/*
-qa_pipeline/data/*
-risk_pipeline/cache/*
-risk_pipeline/logs/*
-risk_pipeline/bestmodel/*
-risk_pipeline/data/*
+qa_pipeline/cache/cached_*
+qa_pipeline/logs/neg/*
+qa_pipeline/logs/pos/*
+qa_pipeline/logs/neural/*
+risk_pipeline/cache/cached_*
+risk_pipeline/logs/prep/*
+risk_pipeline/logs/symptom/*
